Bug 304846 - Compile warnings about deprecated tp_account_prepare_async
Summary: Compile warnings about deprecated tp_account_prepare_async
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: telepathy-logger-qt (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-08-09 10:10 UTC by David Edmundson
Modified: 2013-01-12 11:59 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Edmundson 2012-08-09 10:10:24 UTC
/home/david/projects/telepathy/telepathy-logger-qt/TelepathyLoggerQt4/pending-events.cpp:106:112: warning: ‘void tp_account_prepare_async(TpAccount*, const GQuark*, GAsyncReadyCallback, gpointer)’ is deprecated (declared at /usr/include/telepathy-1.0/telepathy-glib/account.h:228): Use tp_proxy_prepare_async instead [-Wdeprecated-declarations]
Comment 1 Daniele E. Domenichelli 2013-01-12 11:59:00 UTC
Git commit 8eebd78b424d5eba8c49e2638124f873ae757c76 by Daniele E. Domenichelli.
Committed on 12/01/2013 at 12:54.
Pushed by ddomenichelli into branch 'kde-telepathy-0.5'.

Turn off deprecation warnings in stable branch

M  +0    -5    CMakeLists.txt
M  +2    -2    cmake/modules/TelepathyDefaults.cmake

http://commits.kde.org/telepathy-logger-qt/8eebd78b424d5eba8c49e2638124f873ae757c76
Comment 2 Daniele E. Domenichelli 2013-01-12 11:59:01 UTC
Git commit 838159d1849292c4ad2c1cedadf01709c2cef5f4 by Daniele E. Domenichelli.
Committed on 04/01/2013 at 10:43.
Pushed by ddomenichelli into branch 'master'.

Use tp_proxy_prepare_async instead of tp_account_manager_prepare_async
FIXED-IN: 0.6.0

M  +1    -1    TelepathyLoggerQt4/pending-dates.cpp
M  +1    -1    TelepathyLoggerQt4/pending-entities.cpp
M  +1    -1    TelepathyLoggerQt4/pending-events.cpp

http://commits.kde.org/telepathy-logger-qt/838159d1849292c4ad2c1cedadf01709c2cef5f4