Use tp_proxy_prepare_async instead of tp_account_manager_prepare_async

BUG: 304846
FIXED-IN: 0.6.0