TelepathyLoggerQt4/pending-entities.cpp
@@ -66,7 +66,7 @@ void PendingEntities::start()
     }
 
     GQuark features[] = { TP_ACCOUNT_FEATURE_CORE, 0 };
-    tp_account_prepare_async(mPriv->tpAccount, features, (GAsyncReadyCallback) Private::onAccountPrepared, this);
+    tp_proxy_prepare_async(mPriv->tpAccount, features, (GAsyncReadyCallback) Private::onAccountPrepared, this);
 }
 
 void PendingEntities::Private::onAccountPrepared(void *logManager, void *result, PendingEntities *self)
